Finish employer api